styles/app/Card.module.scss
.cardContainer {

    background: linear-gradient(180deg, #F3F3F3 0%, #EAEAEA 100%);
    width: 100%;
    height: auto;
    border-radius: 0 0 15px 15px;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
    z-index: 1;

    .hide {
        display: none;
    }
    



    header {
        height: 30px;
        background: #CFFCF1;
        color: #949494;
        display: flex;
        align-items: center;
        padding: .5em;
        font-size: 1em;
        position: relative;
        // font-weight: bold;
        

        div.headerTextContainer {
            max-width: calc(100% - 35px);
            position: relative;
            // border: 1px solid black;
            display: flex;
            overflow: hidden;


            div.headerText {
                position: relative;
                max-width: Calc(100% - 16px); //fix here 100% looks at the text size first, maybe 100vw
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;

            }
            
            div.editBtn {
                opacity: 0%;
                cursor: pointer;
                transition: opacity 0.2s;
            }

            .edit {
                background: none;
                color: #949494;
                width: calc(100vw - 16px);
        
                &:focus {
                    outline: none;
                }
            }
            
        }

        .deleteCardBtn {
            display: flex;
            opacity: 50%;
            position: absolute;
            right: 25px;
        }

        .collapseBtn {
            display: flex;
            position: absolute;
            right: 5px;
            opacity: 50%;
            z-index: 9;

        }

        &:hover {
            div.headerTextContainer {
                div.editBtn {
                    // display: block;
                    transition: opacity 0.2s;
                    opacity: 50%;
                }
            }
        }

    }


    section.cardBody {


        ul {
            padding: .5em .5em 0 .5em;

            li {
                color: #949494;
                display: grid;
                grid-template-columns: 16px auto 10px;
                grid-gap: .2em;
                width: auto;
                overflow: hidden;
                text-overflow: ellipsis;
                transition: color 0.3s;

                .crossed {
                    text-decoration: line-through;
                }


                textarea.editText {
                    background: none;
                    color: #949494;
                    width: 100%;
                    height: 1em;
                    resize: none;
                    font-family: rubik;
                    // text-decoration: line-through;


                    &:focus {
                        outline: none;
                    }
                }

                .deleteWrapper {
                    display: none;
                }

                &:hover {
                    .deleteWrapper {
                        display: block;
                    }
                }
            }
        }
        .addItemWrapper {
            display: flex;
            justify-content: center;
            padding: .2em;
            // border: 1px solid black;
            border-radius: 0 0 15px 15px;
            height: auto;
            opacity: 0%;
            transition: opacity 0.3s ease-in-out;
        }

        &:hover {
            .addItemWrapper {
                opacity: 100%;
                filter: drop-shadow(0px 0px 6px #DDFFF7);
            }
        }
    }
}

div.collapsed {
    width: 100%;
    height: 30px;
    border-radius: unset;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);


    section.cardBody {
        display: none;
    }
}


.darkMode {
    background: linear-gradient(180deg, #527A71 0%, #455652 100%);
    transition: 0.3s;

    section.cardBody {
        ul>li {
            color: var(--lightest-aqua);
            transition: 0.3s;

        }
    }
}

